# INR

./: .gitignore  experimentation.py  main.py  pyproject.toml  train.py
Rishabh/: __init__.py
Rishabh/siren2_encodec/: benchmark_encodec_pretrained.py  siren2_encodec.py
SriHari/: evaluate.py  train.py
SriHari/siren_vs_lisa_comparison/: QUICKSTART.md  README.md
SriHari/siren_vs_lisa_comparison/scripts/: evaluate.py  run_all.bat  train.py
architectures/: builder.py  models.py
architectures/modules/: base.py  decoders.py  encoders.py  experts.py  registry.py
audio_inr_research/: .gitignore  README.md  SIREN2_VCTK_Experiments.ipynb  SIREN_ARCHITECTURE_EXPLAINED.md  check_setup.py  download_vits_samples.py  evaluate.py  requirements.txt
audio_inr_research/experiments/lisa_ds2_h256_l4/: config.json  results.json
audio_inr_research/experiments/lisa_ds2_h256_l5/: results.json
audio_inr_research/experiments/lisa_ds4_h256_l4/: config.json  results.json
audio_inr_research/experiments/siren_ds4_h128_l3/: config.json  results.json
audio_inr_research/siren2_encodec/: NEXT_STEPS.md  README.md  benchmark_siren_square.py  seanet_encoder.py  siren2_encodec.py  siren_square.py  train_instance.py  walkthrough.md
audio_inr_research/siren_vs_lisa_comparison/: FILE_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md
audio_inr_research/src/architectures/: gon_encoder.py  models.py
data_loader/: datamodule.py  downsampler.py  local_dataset.py
data_loaders/: Downsample.py
metrics/: metrics.py
utils/: coord_utils.py
(+9 files in other folders)
